# CaLM

./: .gitignore  calm-requirements.txt  check.py  data_module.py  pyproject.toml  setup.py  setup_old.py  test-training.sh  test-training.slurm  training.py
calm/: __init__.py  __main__.py  alphabet.py  dataset.py  fasta.py  model.py  modules.py  multihead_attention.py  pipeline.py  pipeline2.py  pretrained.py  rand.py  sequence.py  utils.py
calm/training/: __main__.py  checkpointing.py  cli.py  data_module.py  pretrained.py  training.py
tests/: test_convert.py  test_fasta.py  test_pipeline.py  test_pipeline2.py  test_pipline_orig.py  test_sequence.py
website/: app.py
